# Agent4Mat

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: agent4mat-ci.yml
docs/: ci.md  current_capabilities.md  deploy.md  external_chain_runbook.md  quickstart.md  release_v0.1.0.md
scripts/: export_openclaw_llm_env.py  install_profile.sh
scripts/adapters/: validate_adapter_contract.py
tests/: test_regressions.py
